--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://kowshikroy.github.io/blog/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'matrixcode blog'
+theme = 'hugo-book'
